# vsquery

./: AUTHORS  Makefile.am  README.md  configure.ac
src/: Makefile.am  vsquery.c
